examples/datalog/14_aggregations/84_max_string.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_max_str
Knowledge graph 'test_max_str' created.
Switched to knowledge graph: test_max_str
> .kg use test_max_str
Switched to knowledge graph: test_max_str
> +names[("Alice",), ("Bob",), ("Carol",), ("Dave",)].
Inserted 4 fact(s) into 'names'.
> +last_name(<MAX:N>) :- names(N).
Script error: Parse error: Invalid term: '<MAX:N>'
